--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -15,10 +15,11 @@ The United States justice systems are made up of intricate courts that are in ch
 
 
 ## Introduction 
-The Incarceration Trends data set provided by the Vera Institute of Justice shows the total population of each county in the U.S and their demographics. In this report, I would like to focus on how the number of incarcerated black people change over a period of time as well as how different the population is between counties. Throughout U.S history, there have been numerous accounts of hatred towards black people ranging from slavery in the past to police brutality in the present day. All of these acts stem from racism that were used by people in power, who were usually white Americans to assert dominance. Black incarcerated people were often disproportionate because of accounts of being falsely accused, living in areas that are heavily policed, and racial profiling. These data sets can depict a visualization of how racism and power impacted the lives of black people in the U.S. 
+The Incarceration Trends data set provided by the Vera Institute of Justice shows the total population of each county in the U.S and their demographics.Throughout U.S history, there have been numerous accounts of hatred towards black people ranging from slavery in the past to police brutality in the present day. All of these acts stem from racism that were used by people in power, who were usually white Americans to assert dominance. Black incarcerated people were often disproportionate because of accounts of being falsely accused, living in areas that are heavily policed, and racial profiling. These data sets can depict a visualization of how racism and power impacted the lives of black people in the U.S. Direct stakeholders of this data set includes the U.S population and people of color because by understanding this data set, people will learn about inequities of the judicial system and can also teach others about those inequities. Indirect stakeholders include politicians who can create change involving disproportionate incarceration based on race or gender. 
 
 ## Data Summary 
-There are many values recorded in the data set. It's important when looking at data sets to understand the differences in numbers when it comes to inequality between race and gender. Looking at the data set, we can ask, "What year had the highest amount of incarcerated black people?" In 2018, 153,811 total black people were incarcerated `high_year` where Los Angeles, California is where the highest concentration of black people were incarcerated `recent_state`. Historically, black people in the U.S have been racially discriminated against for their skin color which affect every aspect of their life. Racial discrimination also impacts the treatment of people in prison where most often white people have more power over people of color due to the belief that they are the most superior race. As we analyze the number of deaths in prison, we have to compare if certain groups of people have higher death rates than others. By calculating the average number of incarcerated people based on race, we can observe that white people are the most incarcerated with 116.8 in 2018 while AAPI people have the lowest average of 2.4 `avg_race`. 
+There are many values recorded in the data set. It's important when looking at data sets to understand the differences in numbers when it comes to inequality between race and gender. Looking at the data set, we can ask, "What year had the highest amount of incarcerated black people?" In, `r high_year` total black people were incarcerated where Los Angeles, California is where the highest concentration of black people were incarcerated `r max_black`. Historically, black people in the U.S have been racially discriminated against for their skin color which affect every aspect of their life. Racial discrimination also impacts the treatment of people in prison where most often white people have more power over people of color due to the belief that they are the most superior race. As we analyze the number of deaths in prison, we have to compare if certain groups of people have higher death rates than others. By calculating the average number of incarcerated people based on race, we can observe that white people are the most incarcerated with 116.8 in 2018 while AAPI people have the lowest average of 2.4. Presented are the averages of AAPI, black, latinx, native, white, and other races respectively:
+`r avg_race` 
 
 ## Growth of U.S Prision Populations 
 ```{r plot_prison_pop_for_us, echo= FALSE, message = FALSE}
